# signal-widget

./: .gitignore  Cargo.toml  prd.md
docs/superpowers/plans/: 2026-04-15-floating-mode.md  2026-04-15-unread-hover-popover.md  2026-04-16-runtime-adapter-separation-validation.md
docs/superpowers/specs/: 2026-04-15-floating-mode-design.md  2026-04-15-runtime-adapter-separation-design.md  2026-04-15-unread-hover-popover-design.md  2026-04-16-desktop-widget-window-design.md  2026-04-16-runtime-centric-multi-window-shell-design.md  2026-04-16-widget-native-style-upgrade-design.md
src/: alerts.rs  api.rs  app.rs  config.rs  config_store.rs  domain.rs  lib.rs  main.rs  poller.rs  protocol.rs  unread_panel.rs
src/adapters/: mod.rs
src/adapters/floating_widget/: app.rs  hit_test.rs  mod.rs  state.rs  view.rs
src/adapters/main_window/: app.rs  fonts.rs  mod.rs  view.rs
src/adapters/tray/: mod.rs
src/core/: contract.rs  mod.rs  runtime.rs  state.rs
src/core/policy/: mod.rs  window_lifecycle.rs
src/core/queries/: mod.rs  unread.rs
src/core/services/: mod.rs  poller_service.rs
src/shell/: mod.rs  window_controller.rs  window_manager.rs
src/shell/windows/: mod.rs  widget_window.rs
