[package]
name = "signal-desk-egui"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "轻量级交易信号桌面监控工具"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
# egui 核心
egui = { version = "0.29", features = ["default_fonts"] }
eframe = { version = "0.29", features = ["default_fonts", "glow"] }

# 托盘 (Windows)
tray-icon = "0.19"
winit = "0.30"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 错误处理
anyhow = "1"
thiserror = "1"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 工具
parking_lot = "0.12"
once_cell = "1"
dirs = "5"

[target.'cfg(windows)'.dependencies]
winrt-notification = "0.5"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Diagnostics_Debug"] }
